--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^5.3.18",
     "@storybook/source-loader": "^5.3.18",
+    "@svgr/webpack": "^5.4.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
     "@types/dotenv": "^6.1.1",
@@ -77,7 +78,7 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-preset-react-app": "^9.1.2",
-    "css-loader": "^3.5.1",
+    "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -93,6 +94,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "1.x",
+    "file-loader": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^4.1.2",
     "jest": "^25.5.3",
     "jest-styled-components": "^6.3.4",
@@ -107,7 +109,8 @@
     "ts-jest": "^25.4.0",
     "ts-loader": "^6.2.2",
     "ts-node": "^8.4.1",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "url-loader": "^4.1.0"
   },
   "pankod": {
     "projectType": "nextjs2"
